--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>EspressarCafe</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -44,7 +44,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">EVENTOS</a>
                 </li>
@@ -281,7 +281,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kmBDSMppdLkkFQOgV/eEXCwWnBqQm2IRqsjVDAQONmFHiHbjAsAz+vZk53PkGCqybpTLJ2xduXX03niwjjykTNn08KjoKmDYGeCN041D3PHNN4aK8MytixDjeQKb/lca" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZazyvRbT5DZf80br1Ae1AHbxkdV18zhAWvv7Kz0E0fD5wNmJot5FhKb5IwVm4buRo+eFS5tTG+95p4UIZ74ClH3HptCXQJClWZ0TL+nHgMKgYqSTvjf11SnBcUbsrbQ8" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
