--- a/page1.html
+++ b/page1.html
@@ -44,7 +44,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">EVENTOS</a>
                 </li>
@@ -1207,7 +1207,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JpywhsNxY9Xb3/i52//UOS4wKhx3Aq/UfyXqydwbv16KaUrjq8YhHK71h8E8H36FBOszSuZY7/uqNP1kLecByFAUxUQMEmPhpK+su69lYkPcnhZwshyuSHc7WfNZsEFI" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sgOqaVWqMaIeJ55JOygjk3QVcjHhvtRoTiy7lmlckBX/wlJi9WKUfaJBOGBl9swfCr33aAO4YylFfB7hz/AsTQI1ihzKnSBu256Y+gfmWPKhVBJx9Pj8jG2haVVU8hi0" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-f">
                     </div>
