--- a/index.html
+++ b/index.html
@@ -244,9 +244,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 opening-hours pb-3 align-center">
-                <h3 class="opening-hours-title pb-3 mbr-fonts-style align-center display-5">
-                    Opening Hours
-                </h3>
+                <h3 class="opening-hours-title pb-3 mbr-fonts-style align-center display-5">Horario de apertura</h3>
                 <div class="col-5 days-column mbr-fonts-style mbr-bold align-right display-7">
                     <span>Lunes</span>
                     <span>Martes</span>
@@ -270,7 +268,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kgEVk9UYAodMO+iEmbIbitq3lknAGsdRypiiHSY4dY34cN45cWfwz/3V32CMVrJi2JxM0KXKhg7l4s5urE5QXIQVhivq40FjGUW5PXsESw2k2u2cM2ApDcv6+7Q56u6s" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y2twKM/PgMosSxZ7kI3ymmeD7Z/6WcAbnz+geLjLO6WorBJferIUR3NUWM3tWbAG1JdIpnbO9gNj02oBbLCNm9zKAdMr+AiJkiOGm8cAAaykVL02/gK6crmh88mBMQmo" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
