--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
               <a href="https://mobirise.com" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.facebook.com/espressarcafe/" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://api.whatsapp.com/send?phone=50254817800&text=Me%20gustaría%20ordenar%20" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="index.html" target="_blank">
                 <span class="p-2 mbr-iconfont mbri-hot-cup" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.facebook.com/espressarcafe/" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-sharethis socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
               
@@ -268,7 +268,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y2twKM/PgMosSxZ7kI3ymmeD7Z/6WcAbnz+geLjLO6WorBJferIUR3NUWM3tWbAG1JdIpnbO9gNj02oBbLCNm9zKAdMr+AiJkiOGm8cAAaykVL02/gK6crmh88mBMQmo" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZMCdeGVXHV5OQhDeegDIWU8yj9uIZJdDmLJp9dTVUr6OmNy2R2c69c/wfD65wHfHNieCqzNc2cyJhsaegR+3v4n4/JnGJRmm5+6eakMFlmOPiY9exlKrUtkd4MwTfgTt" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
