--- a/page1.html
+++ b/page1.html
@@ -56,16 +56,16 @@
               <a href="https://mobirise.com" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.facebook.com/espressarcafe/" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://api.whatsapp.com/send?phone=50254817800&text=Me%20gustaría%20ordenar%20" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="index.html" target="_blank">
                 <span class="p-2 mbr-iconfont mbri-hot-cup" style="color: rgb(255, 255, 255);"></span>
               </a>
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.facebook.com/espressarcafe/" target="_blank">
                 <span class="p-2 mbr-iconfont socicon-sharethis socicon" style="color: rgb(255, 255, 255);"></span>
               </a>
               
@@ -1234,7 +1234,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PLe/CmBCUQztpNqsSgqQ+G3vf+Ndt4uSE/sKSnq14yyHfEWSAkzhvZzEqgeec3ItYV+onGVFJ/+eDXOuz3npweqyBKRzZt2XxVYqdbXdzW+YQanlzKvmPK6LQs+k1QYw" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Uf+ItSJrkDQei1KVskeCJaVZBZOtMyMmSQBeJl+wtMSYOH3AEn2fzsy9WQ3GyyufgmTwFdJJyVOqqt+b2r7zviLfOoRYyTs854v/obuiYACbef8SD15pSuTaaLNuuUwG" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-f">
                     </div>
