create github pages

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">EVENTOS</a>
+                    <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
-              <a href="https://www.google.com/maps/place/14%C2%B041'11.9%22N+90%C2%B038'45.3%22W/@14.6866537,-90.6465106,303m/data=!3m1!1e3!4m6!3m5!1s0x0:0x0!7e2!8m2!3d14.6866382!4d-90.6459233?hl=es-419" target="_blank">
+              <a href="https://mobirise.com" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
               </a>
               <a href="https://www.facebook.com/espressarcafe/" target="_blank">
@@ -268,7 +268,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iGriCWO3UrZnguCp8YKpRbba9Uf1WnQep8U400vGv9Dh8u5i4y+PbZoqZACSJgs3jDS7k8Nns1y5qxi0tEXUATLUZvzRlkR9CCtr7fgcHILZAOouwhblS5IMneI0aIfm" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MvplWfd19GDk8Suoae/qkCqzLWi9/qP+QXd/dlCP75A472KoHrwHJCrqSJnxOV0vt17lI6KTySKV5BsCMCVnPSRgrSCIvQ3kg4BTWG8sGiwi28t3MIF8bo1bKs+pFdNi" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
