--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://mobirise.com">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="contactos.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -268,7 +268,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CKtOrAmChzRvqK2zTpNkzrE3R3/IheUP2FmkwJSJMLcGndqzSzLtdEIucR8MelF/9t5AtQAQcIGMp71JphUvgNYa/soUSl2bmChhRVRtFJCVEbtpC9ehRXPll5o03R5a" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2rTfJpzbWQsUGiXCkXZBNTw7KvTSFCl7/Ici2BtgBvC4OuqknTqCxVLp7sLBaQ9SsAFfKsQmfvs+E/K6aQ/xP4iqqioos/jZomlA6CNr6XRn8H9HNm0hhYngNB8gc0Cx" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
