--- a/menu.html
+++ b/menu.html
@@ -44,12 +44,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="nosotros.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -95,10 +95,10 @@
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab1" aria-selected="true">
                                 ESPRESSO &amp; HIELO
                             </a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab2" aria-selected="true">
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab2" aria-selected="true">
                                 PARA COMER
                             </a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab3" aria-selected="true">
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab3" aria-selected="true">
                                 PARA BEBER
                             </a></li>
                     
@@ -1225,7 +1225,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S5gcqg3aWSly/rBteJHIhQwyVYKFfqaXMq1i4gNH+93Enux7G/3dPE/sGlacozzeQ8YxSQQe4Qbo/fHPSGRkiMGFo/Zl553TIFHTkg+LXrYp0Ufcs0EeSTAGxD38mSh8" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="68/q9uBXJmgNDennVwRwuWN82P+CPTmoZLi/PlIKd9JyX4vRQeD6pyXVbZy6NO1olT+gpYPgJI/eZNpJFJhC9eh6weN1No9p/DUC9YcNfeorucnwmBJqdrL73xU/wx17" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
