--- a/contactos.html
+++ b/contactos.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
+                    <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="nosotros.html">
@@ -170,7 +170,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vgChSdnAindpHeuFdut1pTbL36cVpH+vwgAQmGhawkSlbd0NIbgmr93PvJFWwfj51nl8IYbOCRfJ6r83LA3SOrMVLOs39Y8Fe4/awADFnGfQ1XZ4mlpxWIOgZKkLInvw" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K131+DUp1G7hZAfpUTDibPspf5f1vo5fPxYxGuqWT5U6aDlOgzgc22yHcd2xUmn0/gqzaYicH6GSfRbyA7n3AbdW1p/8vGU/kS51H5+qhiluGDtjBSC50Vlt+bkex8/6" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
