--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
+                    <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="nosotros.html">
@@ -199,7 +199,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3WxcetsDBjVcf2JmC1g5lZPrnK9pZb4+de3vcMxz2qUfvrf/cMqFAOTeQFc7uvvhpltMdZDyPqe5WBXgF5M1FbnaYu4AzluSt/vuOswm4lUBFUom3kN3stcUaFvlwCZQ" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zBO0vGRphJPCg0vvoV3viu/PdwR9+CaJqOcStMvS5ijckvlBvTVruEM622hybhs0/0zxXokoFEkVsZwuXyHKARgGyg539bTnzOFWUGklrU76QjKwFsIvhqLDXw7xHsxu" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
