--- a/nosotros.html
+++ b/nosotros.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
+                    <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="nosotros.html">
@@ -306,7 +306,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sBrfL+0PnImZKIQyz+ZkBOSVCn3Ide9HV/3X2NnVtkH3IxPXmrkLpVG0Qa1EXy9S3sRd9vhErT6/XomVMzUzRJPeguzv7f6Zi0d6kvhCo99K+ObWlmt4TvLXnJhP3iXS" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gZCbQrGMud/QGcwmRWFnW+s3Z8fVc+/Fl1pyFdZT4XqIcV4f+v3+ZbiNiuYopt5AOlanXOy3ZDTH1a36YzTkXEG7z0yta9irgbCcWbdf+UjLBeLcYNeMqCPyoD79gsQ8" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-12">
                     </div>
