--- a/ofertas.html
+++ b/ofertas.html
@@ -47,7 +47,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">EVENTOS</a>
+                    <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="nosotros.html">
@@ -167,7 +167,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k/NQPv5QHL6ZKrPfRgyEtLVX+wD/hzjwc0lm0PZ3RVOqG7A0co+Wl1X+LBpUwiJNdnJhCVPVPa7Lz+RZ2jbAvVBPVd/j2kEZWXukrfP3Y1aWK4zDqrcoko+CP1heAdF+" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tgbv2dN8X5C5QbuiAGjRmY3Mz7lBLDBVouPYMVC8txaEEjAf0ZAXR1tucxrEKxTr57rCW61pTdZS1p0Ly1xoeRhuJ8R3rSgAAbzprkD9aGpkbgrONG2vI9aKy6ffhd9g" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-17">
                     </div>
