create github pages

--- a/eventos.html
+++ b/eventos.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-g">
 
     
@@ -144,7 +159,7 @@
                 </div>
                 
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IuEVWCndtGWY3WN+501gCQhpIlqA8nq11Hy9Ee5IZ3gkhXLmPkSHz0+xCmJt5ELVIVq9tOR7WtZidMofEyjMYkiGZntQxUeoBQ7jXon8XsjoCiw5awsHTC28CEuCDdBr" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CL/OCPn4p2Cpms+QYgAq2sjzObsUm1KqbDvQEEUe8eHCJOGZ5CFU/tFYAazg21IpPXTa8m2FQ4pgbPmgl4FrTHd0lfeUvm526cR04F1Ba7x4B0IDiA0u7wTn46FRLEuH" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-form2-k">
                     </div>
