--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-2">
 
     
@@ -199,7 +214,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zBO0vGRphJPCg0vvoV3viu/PdwR9+CaJqOcStMvS5ijckvlBvTVruEM622hybhs0/0zxXokoFEkVsZwuXyHKARgGyg539bTnzOFWUGklrU76QjKwFsIvhqLDXw7xHsxu" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QxVEdySB1S2ybJz3dlhKWkpxm9mrfiMbiBwtEDPaMH/SHX0T2YQHOxuztsEW0KZJTs16NlDd3PQLYhO64JP9CGYvetz7ANlZ6zK9Xv7XwmETg+5dF94anoxRapLlY8uu" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
