--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-9">
 
     
@@ -1225,7 +1240,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SoioBWR/G2ZiWXHO6OFcxfXoHWt1RV1Y7E6vjnD8wm65baNUklLskyj9k4a1LrlReT8t1YgjWCsLoiETUQntm5lYp46SpkBVsG/4CEzcuUJSuwLj4WLGIqt5yLv9KiXK" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Kmh2q947+N0qbQa7cNGHb53h5Pgii5s1O7+FD2sWoE+5a1ytemR2MX7UjN8FS/s609g7tkIBa4m4GFEMCI1I6DRcZOG6sZycQHwKZcJdHRmJkF+KQ0Y26FpnDn4x5+zK" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
