--- a/nosotros.html
+++ b/nosotros.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-x">
 
     
@@ -306,7 +321,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gZCbQrGMud/QGcwmRWFnW+s3Z8fVc+/Fl1pyFdZT4XqIcV4f+v3+ZbiNiuYopt5AOlanXOy3ZDTH1a36YzTkXEG7z0yta9irgbCcWbdf+UjLBeLcYNeMqCPyoD79gsQ8" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xYaRLTq3MmaBx6iQkfCNDUh3eALgd6U0/6n8gDpqI1Y+tIKpqZ/AkHwhdwaQQldinCldXuMAU4QJznliaxM3jEWm3xx0/tR8Wo8vsnGdqz9UTjoRLyOQH/GXMyDrnxpW" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-12">
                     </div>
