--- a/ofertas.html
+++ b/ofertas.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-13">
 
     
@@ -167,7 +182,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tgbv2dN8X5C5QbuiAGjRmY3Mz7lBLDBVouPYMVC8txaEEjAf0ZAXR1tucxrEKxTr57rCW61pTdZS1p0Ly1xoeRhuJ8R3rSgAAbzprkD9aGpkbgrONG2vI9aKy6ffhd9g" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zbJnUHggzuk5r++8o4D88BKlpJxhy0LUXqljOkvTbn8wnXw3heu0DiB4dcdQjg810U12RQQhIVqf9Pao4lYW44uAkMbV8iJnzr9qPDs6AmbagRNJhKsNazBMBt9JouG1" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-17">
                     </div>
