--- a/eventos.html
+++ b/eventos.html
@@ -59,7 +59,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -68,7 +68,7 @@
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.google.com.gt/maps/place/14%C2%B041'12.1%22N+90%C2%B038'45.4%22W/@14.686688,-90.6465576,318m/data=!3m2!1e3!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d14.6866877!4d-90.6459384?hl=es-419" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
               </a>
               <a href="https://www.facebook.com/espressarcafe/" target="_blank">
@@ -159,7 +159,7 @@
                 </div>
                 
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4bPwToooyh7yP+8qIcGAoXudBAVoKk/UeM31SNaqlwnBopNVRlTIrcRNKwOsD1amk/e3s/XB6FLv/RY4w693Efbwkyj8Reofs2EzhU6XYkGM9j/PnxIuH27tXQif9zbV" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="prVFZo9S9FVI9zEWhCgX9T2bCy+lXbyxTSLHa7AK4GtQ0SLsomgFEUHvVTXseOZydKQR6FS0YghW+cAHQgb/37a17rahb+6LMCV62IkdiLZVZeA2LQPd4noWORdNS6oN" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-form2-k">
                     </div>
