--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -68,7 +68,7 @@
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
-              <a href="https://mobirise.com" target="_blank">
+              <a href="https://www.google.com.gt/maps/place/14%C2%B041'12.1%22N+90%C2%B038'45.4%22W/@14.686688,-90.6465576,318m/data=!3m2!1e3!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d14.6866877!4d-90.6459384?hl=es-419" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
               </a>
               <a href="https://www.facebook.com/espressarcafe/" target="_blank">
@@ -1240,7 +1240,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s89RC4YNZqDx35g41SQPi3AJtnQ5TI0T9Ig8Lw+7LWUkCVFxSGYif5bZ7AoiRTcxtPf2/kLCKDH46GyNjdCQN1j+eDMW5W5TW1p2J0wUhxvaCJZjEQg2XiRr5uzhJmKT" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UgN4Sy7hqCl3556ppF9E5GcKZYdvAAsr0jbOOu0OXA8B8uPwfwArysmDNy3n1/pahu8o9jG9aJPMUqYKZxZI8V30Q6MEj192ewg4VuEI/s6ZGIIxzlYk5azXOi4Zl4Mq" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
