--- a/page6.html
+++ b/page6.html
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -203,7 +203,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pMUjbs/FPi65Vin9RO4sG5ECNGD6lku9reO5UCwHkuf/6jo3CKxveQ2Z6NwozGHQxQ62j+vfhxRHpLGVxBt/ZbsMhlo4HO8vXvI5EQMiK2bjVZv2dk8XSZkSP3y9/dyx" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yixZ4Nl5M1pVv8Sz0TQdv9vHIll2LNfX7FBqXszMHjJQGeJ2wrJYPvLsYAR2wm4m4X/7lotj98aJJrE4Njr+HIczCW9QtUCBCFEi0QAyy495bOmE9l0DIqbGWs6D/C08" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-1c">
                     </div>
