--- a/contactos.html
+++ b/contactos.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -185,7 +185,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Db+Y/Qjoy1vw77c0uzAqpyDId1ou29Cj4RCIG0gyvb9ZiyFADykUGEzCs7gZaLM9HQSGZEoXupIWWbpjYfSz0/bpjrm/SjD4jSz/O3HVUEqvAr57aUUEsMNfcxb6zk13" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zyqadW4HSTRQ/XPy2cZKHCFvSqkhiswlw3gLKn0kphGsfAqN4of1hvFy4HZiExEo7R/aJFdm+AhNHjAxqs++AvCNnQAdXdTxJluk4Y/qZ5jadZXZuT8FHF1ZGdrhEa9a" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
