--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -214,7 +214,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U2sepDA430LHLVD0SGPq0ksJ8wQEIuzHs0FjUkKvBa6j0ZB/KieeI78VeXd5mwfNebE8PPDqHE633y2tVxEAJwzxTcZLrzgR64OfC5lSMs7WRZpNylVIDAUV5Q2qHtsm" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jh9VUyKdBXaExUubU+VbBXZne2+TYciMKcBWnl/K9NjnNgaZEQwoaBImv1H2zTIDyeomSq+TeX7wyyo/yA2zulWfBN98hHjTZPV8sg4lxv/gvxaQtYSzPDWVv15JsN6d" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
