--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -1090,7 +1090,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vkzi+RDLrmP2eVX0phoyjdz2fpoJD4V/DT2v5uTtc25MsJj7anqIHBYnfSLbHKYcTZm4kQmGkSQeT2ebuuSjybYSoWIr40Zm3OGxVAEvDt179Xl2cGy4kfMEdtw7Lduc" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J/u741NDwiEC1tQ0Rc7T9+7I1l3DFtPyfJXr88BOoQn2lXzRGFt8c5PYCJz16+WnoQMEd6ZZPGbwDAAgxbvkxAsFgYyZVzjhhgydtT2g3ejXGCrZyL3PHSRpmHOsdSUA" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
