--- a/nosotros.html
+++ b/nosotros.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -311,7 +311,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VDRsrSh+qaEZwcKFpVlqhpCjJxjx0BablYnGaNDbJl0kRSidtOzfc+7/pg5VAUKRRWX5VWKkOv3NL/4rjekKMriwBUGCuSSmS0t+dByNCPFA8+NbYVgsLe2VVtioBNvt" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="myIzeDQ9pPPK7d/fccC97GoP0PTCmEvQUBEdeJSvypqsioRiSrIfwdN2Ju4IAt4fyovg7QmbNjCFaO8QuSNu0M5V9LRftK+YQTLlG2ceX9OfpyXVC5nsKiwg1G6CYIcU" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-12">
                     </div>
