--- a/ofertas.html
+++ b/ofertas.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="https://mobirise.com">
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                     Espressar Café</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -181,7 +181,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KfgJntBQk/b7a+s1H7XAcGyFha4rrsYFH2qDpZBV56Z2SMp9xOIrM36xW4+kG2yCKUvLqF68lnVlq6fq84Rcj2xlXFfU+34CUIfsfv2D8fxq2JhS94WvAAQZOXDNu3dC" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RYkT+TtwxjDv8Rv5qF2/X6WyQ7qxfGWRdEV1qwTw6/Sak1XpuJwytTNymmyMTblLysQiPghCoYTgurdZ+Q0BA8H+xmUJUJJwgVnWJ39wJWU63CKPWW2kTHHNz4tvqWaB" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-17">
                     </div>
