create github pages

--- a/page6.html
+++ b/page6.html
@@ -62,7 +62,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -203,7 +203,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AdUBlVz+WwsgKp26zFKFMrP4c4eXeyPpre8jPHH+Rk+U2hBrbDwzAjApL5oPmWJiXmFS1cX33IG+0aCIBofE7GjLgFGCE1S9SU42COXNivzRqWm5J7TjOp5uvKD4QUT+" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KhOQbdBVHZVZr7uRfNREEOGwRQI2Eo4BtGrvfckYp2aLeMLEyl7hGIUy4J+ubHQydOoXH8IJjzj1SPJ0yMhm8RBB3pIMlE+AeklkIaFeEOyXbNOrFNaf5alFjSs6/v7b" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-1c">
                     </div>
