--- a/contactos.html
+++ b/contactos.html
@@ -59,7 +59,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -185,7 +185,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EZuWO/YIvWaX9dZx0f134Yy3Hpbrap1C0KciWZi8qD3wuh5DLMe4Hpl5g1jxHlC7Rb9AlNPsUjfutqHIcaVKDw2F+eeAwYIP0ZSfWthZ8f8ou2z5O40hr7Os/X78q/Ze" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L0rmUXNixriFP5v1LrL5IvCUt7+1mbrTOm3C0WVgk19PMr4N0zLb33feDqu7tEke+aqtsAQZdlF+IxTR9Gn0/DZuoB3kR9sbSQIv5hz9HqAmC8xaF//c9kbzIjXnfmeO" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
