--- a/contactos.html
+++ b/contactos.html
@@ -59,7 +59,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -185,7 +185,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vhg5FzzK8oxy5fStzjKPQtnHhSszNYwbgqJvs6VWCjwG+aAVxt2m44nSADNcgOwHg64qy76XifbSXNbLUhA6X06PxC0LJADmiF/oaN0Qo15+TJckz1y/zneXwUNqkGKK" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MzD26uly0hB3+SqupNm/ghqJ7YXZvcb1jC8P0snMhn/nBhlsIe+n24bwIeT8LKcbZeGdajWAIZvyKbrkD/6xDFtQD1Ds3N0/aJPRFU6dGkHFswu+YFly4mmq78+u9NCt" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
@@ -197,9 +197,7 @@
                         <textarea type="text" class="form-control display-7" name="message" placeholder="Mensaje" rows="2" data-form-field="Message" id="message-footer4-r"></textarea>
                     </div>
                     <div class="btn-row align-center">
-                        <span class="input-group-btn">
-                            <button href="https://mobirise.com/" type="submit" class="btn btn-form btn-primary display-4">Send</button>
-                        </span>
+                        <span class="input-group-btn"><button href="https://mobirise.com/" type="submit" class="btn btn-form btn-primary display-4">Enviar</button></span>
                     </div>
                 </form>
             </div>
