--- a/page6.html
+++ b/page6.html
@@ -62,7 +62,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -203,7 +203,7 @@
                 </h3>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MQVx9nmJ9BdBp8RXqajimNZewgjr2TfAceqKJfZIuLsKfALQSStSpgnGuPhQUDaBrupTJ2PdmvyZpOU6ruUIUvmWYVSQ+H/x8dZ8tTgR1nvNcqh0Jm0uUnMTBmr04L9I" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iRo9+HZcUZkHKyRMljF2x0zsZ0X2UpmwRQvyJBq0lYbcUpx69KX+5ygcVjjg94trZ9JxU6S9AO8pH49z6xuXL0bkQ3Ji8E+OWXQR+AHtFbIgkDPg/7x9Hh6ofC/Sa1k+" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Name" data-form-field="Name" required="" id="name-footer3-1c">
                     </div>
