create github pages

--- a/eventos.html
+++ b/eventos.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-g">
 
     
@@ -145,7 +160,7 @@
                 </div>
                 
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="B/skxREWINpZd4jx3lBe1rfGCgx5NKRsM78mmffz/k790+irczFQonzQ/FV1rrhzxQ29j8TmkCVMPTr55BaAZSdcFzPXIzzOKIjuhvvOGXMocoRDE7QBtYr6mYDFtuee" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mtnhqiW/fLniFVi1g+UHFlfkJjlBtTiO7/J/yUmCk0OAohbiegBb+QAV90WjP/ULJY0uyqp7s2O3+oUx1bb/SDkYCkcnvUZaVj788FnTRkx2Ixsvn0ErE2iHlHaouqA9" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-form2-k">
                     </div>
