--- a/contactos.html
+++ b/contactos.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-n">
 
     
@@ -171,7 +186,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WHDHHbqBAubZQaC2Jli9EWJ3zbYXk5GEAGuk8KkRro3zQtl4PkKwp3Q+UNvwn15WM529rPuTMMMK1219x9WQ5p5nG76msWZOQzZLNn9co/eYBeD3vFUYv7bvP//gGtvt" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fgfEjr9o5Jd4V24fvLpsRoHCa9/n6dIwbS2sZOZvuqWaAnBZWWNXuV5h/76gI5+x35rhRwoOmjqO6Wu+RAL+GMDmChKrE+ga3rv6qye+UHO7KfZJbLdU9mYZhHtN8NR5" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
