--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120028147-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-2">
 
     
@@ -256,7 +271,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BAjKt8hHkEJfySOfvhqYtmf6Vl42lk98TivAJ9s4n+Yx+/PgDZcUdf7GfzDWt6QElfZyUhO/mxC2UJtrV1GrF4glmJfMHurxVO3f/SpxUuwv3/U7oHhzAsbfTvQJYy3H" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wD64jWoBIc4qLvVKmdrEz/fyhr3BjH0XsCkEDT/jnhTN/OvHzEBv/+imOzXbg1NZENsTaVXgjCvlroySyXboz+b4EPmhH4IRI+G8VBPA86J+WzoMuTBYVbq1yCYqzm18" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
